// ALl scalar types

syntax = 'proto3';
// in order for proto to understand this is in dif package
package scalar;
option java_multiple_files= true;
option java_package="com.fslabs.models.scalarTypes";

message Person{
  // underscore for naming convention
  string full_name = 1;
  int32 age = 2;
  bool employed = 3;
  double salary = 5;
  int64  bank_account_number = 6;
  sint32 bank_balance = 7;
}